[project]
name = "xiuer-spider"
version = "0.1.0"
description = "小红书搜索爬虫 - GitHub Action 版本"
readme = "README.md"
authors = [
    { name = "丁俊杰", email = "10725046+JunJD@user.noreply.gitee.com" }
]
requires-python = ">=3.12"
dependencies = [
    "PyExecJS",
    "requests",
    "loguru",
    "python-dotenv",
    "retry",
    "openpyxl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "apis",
    "xhs_utils",
    "src/spider_xhs",
    "static"
]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check {args:.}" 